syntax = "proto3";
package proto;
option go_package = "github.com/bdreece/hopper/pkg/proto";

import "google/protobuf/timestamp.proto";

message Device {
  string uuid = 1;
  string name = 2;
  optional string description = 3;

  uint32 tenant_id = 4;
  uint32 firmware_id = 5;
  uint32 model_id = 6;
}

message AuthDeviceRequest { string api_key = 1; }

message AuthDeviceResponse {
  string token = 1;
  google.protobuf.Timestamp expiration = 2;
}

message GetDeviceRequest { string uuid = 1; }

message UpdateDeviceRequest {
  GetDeviceRequest where = 1;
  optional string name = 2;
  optional string description = 3;
  optional uint32 firmware_id = 4;
  optional uint32 model_id = 5;
}

message DeleteDeviceRequest { string uuid = 1; }